--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>667</width>
-    <height>449</height>
+    <width>671</width>
+    <height>496</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,12 +22,21 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <layout class="QHBoxLayout" name="layout_api">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetFixedSize</enum>
+      </property>
       <property name="bottomMargin">
        <number>10</number>
       </property>
       <item>
        <widget class="QLabel" name="label">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
          <string>Base Api Version:</string>
         </property>
@@ -35,6 +44,9 @@
       </item>
       <item>
        <widget class="QComboBox" name="cmb_api">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="minimumSize">
          <size>
           <width>44</width>
@@ -129,7 +141,7 @@
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
-          <height>20</height>
+          <height>0</height>
          </size>
         </property>
        </spacer>
@@ -137,43 +149,82 @@
      </layout>
     </item>
     <item>
-     <widget class="QWidget" name="profileSource_selector_2" native="true">
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <property name="leftMargin">
-        <number>0</number>
-       </property>
-       <property name="topMargin">
-        <number>0</number>
-       </property>
-       <property name="rightMargin">
-        <number>0</number>
-       </property>
-       <property name="bottomMargin">
-        <number>0</number>
-       </property>
-       <item>
-        <widget class="QLabel" name="lbl_source">
-         <property name="text">
-          <string>Profile Source:</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QToolButton" name="btn_source">
-         <property name="text">
-          <string>...</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
+     <layout class="QHBoxLayout" name="layout_source">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetFixedSize</enum>
+      </property>
+      <item>
+       <widget class="QLabel" name="lbl_source">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>90</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Profile A (Source):</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="le_source">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="btn_source">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="profileTarget_selector">
+     <layout class="QHBoxLayout" name="selector_target">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetFixedSize</enum>
+      </property>
       <item>
        <widget class="QLabel" name="lbl_target">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>90</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="text">
-         <string>Profile Target:</string>
+         <string>Profile B (Target):</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="le_target">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="echoMode">
+         <enum>QLineEdit::Normal</enum>
+        </property>
+        <property name="readOnly">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -203,41 +254,98 @@
      </spacer>
     </item>
     <item>
-     <layout class="QGridLayout" name="fields_selector">
+     <layout class="QGridLayout" name="fields_selector" rowstretch="0,0,0,0,0">
       <property name="sizeConstraint">
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
       <property name="bottomMargin">
        <number>0</number>
       </property>
-      <item row="4" column="1">
-       <widget class="QPushButton" name="btn_addOne">
+      <item row="0" column="0">
+       <widget class="QLabel" name="lbl_allProfiles">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
-         <string>&gt;</string>
+         <string>Profile A:</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
-       <widget class="QLabel" name="lbl_included">
-        <property name="text">
-         <string>Included Fields:</string>
+      <item row="1" column="1" rowspan="3">
+       <widget class="QListWidget" name="list_target">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="acceptDrops">
+         <bool>false</bool>
+        </property>
+        <property name="dragEnabled">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <spacer name="spc_2">
+      <item row="1" column="2" rowspan="3">
+       <widget class="Line" name="line">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>10</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
+       </widget>
       </item>
-      <item row="9" column="0" colspan="3">
+      <item row="1" column="0" rowspan="3">
+       <widget class="QListWidget" name="list_source">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="acceptDrops">
+         <bool>false</bool>
+        </property>
+        <property name="dragEnabled">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="3">
+       <widget class="QLabel" name="label_2">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Profile Merged:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="5" rowspan="3">
+       <widget class="QScrollBar" name="verticalScrollBar">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0" colspan="5">
        <widget class="QProgressBar" name="bar_loading">
         <property name="enabled">
          <bool>true</bool>
@@ -255,89 +363,62 @@
          </size>
         </property>
         <property name="value">
-         <number>69</number>
+         <number>100</number>
         </property>
         <property name="textVisible">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="invertedAppearance">
          <bool>false</bool>
         </property>
        </widget>
       </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="lbl_allProfiles">
+      <item row="0" column="1">
+       <widget class="QLabel" name="lbl_included">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
-         <string>All Profile Fields:</string>
+         <string>Profile B:</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="2" rowspan="8">
-       <widget class="QListWidget" name="list_included">
-        <item>
-         <property name="text">
-          <string>Opportunity</string>
-         </property>
-        </item>
+      <item row="1" column="3" rowspan="3">
+       <widget class="QListWidget" name="list_merged">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="acceptDrops">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
-      <item row="1" column="0" rowspan="8">
-       <widget class="QListWidget" name="list_allProfiles">
-        <item>
-         <property name="text">
-          <string>Account</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Contact</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Custom__c</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item row="5" column="1">
-       <widget class="QPushButton" name="btn_rmvOne">
+      <item row="2" column="4">
+       <widget class="QToolButton" name="toolButton_3">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
-         <string>&lt;</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QPushButton" name="btn_addAll">
-        <property name="text">
-         <string>&gt;&gt;</string>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="1">
-       <spacer name="spc_3">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="6" column="1">
-       <widget class="QPushButton" name="btn_rmvAll">
-        <property name="text">
-         <string>&lt;&lt;</string>
+         <string>X</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <layout class="QHBoxLayout" name="layout_merge">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetFixedSize</enum>
+      </property>
       <property name="bottomMargin">
        <number>0</number>
       </property>
@@ -356,24 +437,31 @@
       </item>
       <item>
        <widget class="QPushButton" name="btn_start">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
-         <string>Start</string>
+         <string>Merge!</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
    </layout>
-   <zorder>profileSource_selector_2</zorder>
    <zorder></zorder>
    <zorder>spc_1</zorder>
+   <zorder></zorder>
+   <zorder>horizontalLayoutWidget</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>667</width>
+     <width>671</width>
      <height>20</height>
     </rect>
    </property>
@@ -382,14 +470,9 @@
  </widget>
  <tabstops>
   <tabstop>cmb_api</tabstop>
-  <tabstop>btn_source</tabstop>
   <tabstop>btn_target</tabstop>
-  <tabstop>list_allProfiles</tabstop>
-  <tabstop>btn_addAll</tabstop>
-  <tabstop>btn_addOne</tabstop>
-  <tabstop>btn_rmvOne</tabstop>
-  <tabstop>btn_rmvAll</tabstop>
-  <tabstop>list_included</tabstop>
+  <tabstop>list_source</tabstop>
+  <tabstop>list_target</tabstop>
   <tabstop>btn_start</tabstop>
  </tabstops>
  <resources/>
